--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
 		<!-- Countdown-->
 		<div class="countdown germany">
-			<span>Deutschland</span>
+			<span>Germany</span>
 			<h1 id="time_Germany">00:00:00</h1>
 		</div>
 		<div class="countdown belarus">
@@ -235,7 +235,7 @@
 			<h1 id="time_Belarus">00:00:00</h1>
 		</div>
 		<div class="countdown moldavien">
-			<span>Moldavien</span>
+			<span>Moldova</span>
 			<h1 id="time_Moldavien">00:00:00</h1>
 		</div>
 	</body>
