--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 			text-align: left;
 		}
 		.countdown.germany {
-			right: 50px;
-			top: 120px;
+			left: 50px;
+			top: 340px;
 			color: violet;
 		}
 		.countdown.belarus {
