--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 			<h1 id="time_Belarus">00:00:00</h1>
 		</div>
 		<div class="countdown moldavien">
-			<span>Moldova</span>
+			<span>Moldova / Cyprus</span>
 			<h1 id="time_Moldavien">00:00:00</h1>
 		</div>
 	</body>
