--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
 		<!-- Countdown-->
 		<div class="countdown germany">
-			<span>Germany</span>
+			<span>Germany/ Czech Republic</span>
 			<h1 id="time_Germany">00:00:00</h1>
 		</div>
 		<div class="countdown belarus">
@@ -236,7 +236,7 @@
 			<h1 id="time_Belarus">00:00:00</h1>
 		</div>
 		<div class="countdown moldavien">
-			<span>Moldova / Cyprus / Ukraine</span>
+			<span>Cyprus / Ukraine</span>
 			<h1 id="time_Moldavien">00:00:00</h1>
 		</div>
 	</body>
